불필요한 파일 삭제

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- images loded -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <!-- 외부 스크립트 -->
-    <script src="./js/main_copy.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
