--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,7 @@
     <!-- bx slider css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <!-- 스타일시트 -->
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -24,50 +25,49 @@
 </head>
 
 <body>
-    <div class="header" style="position:relative;">
-        <div class="header_content" style="margin-bottom: 10px; width: 100%;">
-            <img src="./img/neon_1.png" alt="" style="width: 1903px; position: relative; top: 0px;">
-            <div class="content"
-                style="width: 980px; margin: 0 auto; top:15px; left: 50%; transform: translateX(-50%); height:100px; position: absolute; display: flex; padding: 0px 5px 25px 0px;">
-                <h1 style="align-items: center;">
-                    <a href=" /" style="width: 150px;">
-                        <img src="./img/logo.png" style="width: 150px;" alt="">
+    <div class="header">
+        <div class="header_content">
+            <img src="./img/neon_1.png" alt="네온led배경">
+            <div class="content">
+                <h1>
+                    <a href=" /">
+                        <img src="./img/logo.png" alt="로고">
                     </a>
                 </h1>
-                <ul class="lnb" style="position: absolute; right: 0%;top: 50%; transform: translateY(-50%);">
-                    <li style="float:right;">
+                <ul class="lnb">
+                    <li>
                         <a href="/">로그인</a>
                     </li>
-                    <li style="float:right; margin-right: 20px;">
+                    <li>
                         <a href="/">회원가입</a>
                     </li>
-                    <li style="float:right; margin-right: 20px;">
+                    <li>
                         <a href="/">MyPage</a>
                     </li>
-                    <li style="float:right; margin-right: 20px;">
+                    <li>
                         <a href="/">고객센터</a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="bg" style="position: absolute; width: 100%;  display: none; z-index: -1; ">
+
+        <div class="bg">
         </div>
 
-        <div class="gnb"
-            style="position: absolute; top:105px; left: 50%; transform: translateX(-50%); width:980px; padding:5px 0; z-index: 100;">
-            <div class="contents" style="width: 980px; margin:0 auto; position: relative;">
-                <ul class="gnb_menu" style="display: inline-flex; overflow: hidden;">
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block;">공연</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
+        <div class="gnb">
+            <div class="gnb_contents">
+                <ul class="gnb_menu">
+                    <li>
+                        <a href="">공연</a>
+                        <ul class="depth2">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">예매율 순위</a>
                             </li>
                             <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">평점 순위</a>
                             </li>
                         </ul>
                     </li>
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block;">예매</a>
+                    <li>
+                        <a href="">예매</a>
                         <ul class="depth2" style="display: none; height: 200px;">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">지역별 예매</a>
                             </li>
@@ -75,8 +75,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block;">이벤트</a>
+                    <li>
+                        <a href="">이벤트</a>
                         <ul class="depth2" style="display: none; height: 200px;">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">진행중인
                                     이벤트</a></li>
@@ -84,8 +84,8 @@
                                     이벤트</a></li>
                         </ul>
                     </li>
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block; margin-left: 15px;">커뮤니티</a>
+                    <li>
+                        <a href="">커뮤니티</a>
                         <ul class="depth2" style="display: none; height: 200px; margin-left: 15px;">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">자유게시판</a>
                             </li>
@@ -108,7 +108,7 @@
         <div class="play_chart">
             <div class="contents" style="width:980px; height:100%; margin:0 auto; overflow: hidden;">
 
-                <div class="play_swiper slider" style="">
+                <div class="play_swiper slider">
                     <div class="chart_text"
                         style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
                         <div class="select_chart" style="display: inline-flex;">
@@ -117,7 +117,7 @@
                         </div>
                         <a href="" style="font-size: 14px;">전체보기 ></a>
                     </div>
-                    <div class="chart-list" style="">
+                    <div class="chart-list">
                         <table>
                             <tbody>
                                 <tr>
