gnb, lnb hover 효과 적용, 로고 이미지 크기 변경

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="content">
                 <h1>
                     <a href=" /">
-                        <img src="./img/logo.png" alt="로고">
+                        <img class="logo" src="./img/logo1.png" alt="로고">
                     </a>
                 </h1>
                 <ul class="lnb">
@@ -86,7 +86,7 @@
                     </li>
                     <li>
                         <a href="">커뮤니티</a>
-                        <ul class="depth2" style="display: none; height: 200px; margin-left: 15px;">
+                        <ul class="depth2" style="display: none; height: 200px;">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">자유게시판</a>
                             </li>
                             <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">극단원 모집</a>
@@ -329,7 +329,7 @@
     </div>
     <footer style="width: 980px; margin:0 auto;">
         <a href=" /" style="width: 150px;">
-            <img src="./img/logo.png" style="width: 150px;" alt="">
+            <img class="logo" src="./img/logo1.png" alt="로고">
         </a>
         <div class="company_info">
             <address>(08368)서울특별시 구로구 항동 171-4, 하버라인 3단지 309동 101호</address>
