--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
             <img src="./img/neon_1.png" alt="네온led배경">
             <div class="content">
                 <h1>
-                    <a href=" /">
-                        <img class="logo" src="./img/logo1.png" alt="로고">
+                    <a href="#">
+                        <img class="logo" src="./img/logo.png" alt="로고">
                     </a>
                 </h1>
                 <ul class="lnb">
                     <li>
-                        <a href="/">로그인</a>
+                        <a href="./login.html">로그인</a>
                     </li>
                     <li>
-                        <a href="/">회원가입</a>
+                        <a href="./join.html">회원가입</a>
                     </li>
                     <li>
-                        <a href="/">MyPage</a>
+                        <a href="./myPage.html">MyPage</a>
                     </li>
                     <li>
-                        <a href="/">고객센터</a>
+                        <a href="./help.html">고객센터</a>
                     </li>
                 </ul>
             </div>
@@ -329,7 +329,7 @@
     </div>
     <footer style="width: 980px; margin:0 auto;">
         <a href=" /" style="width: 150px;">
-            <img class="logo" src="./img/logo1.png" alt="로고">
+            <img class="logo" src="./img/logo.png" alt="로고">
         </a>
         <div class="company_info">
             <address>(08368)서울특별시 구로구 항동 171-4, 하버라인 3단지 309동 101호</address>
