로그인, 회원가입, 아이디/비번찾기 페이지 추가

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                     <div class="chart_text"
                         style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
                         <div class="select_chart" style="display: inline-flex;">
-                            <h3>인기순 |</h3>
+                            <h3>인기순</h3>
+                            <h3 class="txt_div">|</h3>
                             <h3>평점순</h3>
                         </div>
                         <a href="" style="font-size: 14px;">전체보기 ></a>
