--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ticatcher - 로그인</title>
+    <title>로그인 | Ticatcher</title>
     <!-- 구글 웹폰트 -->
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&family=Noto+Serif:ital,wght@0,400;0,700;1,400&display=swap"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <!-- 스타일시트 -->
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -27,88 +27,51 @@
 <body>
     <div class="header">
         <div class="header_content">
-            <img src="./img/neon_1.png" alt="네온led배경">
             <div class="content">
                 <h1>
                     <a href="./index.html">
-                        <img class="logo" src="./img/logo.png" alt="로고">
+                        <img class="logo" src="./img/logo_join3.png" alt="로고">
                     </a>
                 </h1>
-                <ul class="lnb">
-                    <li>
-                        <a href="./login.html">로그인</a>
-                    </li>
-                    <li>
-                        <a href="./join.html">회원가입</a>
-                    </li>
-                    <li>
-                        <a href="./myPage.html">MyPage</a>
-                    </li>
-                    <li>
-                        <a href="./help.html">고객센터</a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="bg">
-        </div>
-
-        <div class="gnb">
-            <div class="gnb_contents">
-                <ul class="gnb_menu">
-                    <li>
-                        <a href="">공연</a>
-                        <ul class="depth2">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">예매율 순위</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">평점 순위</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">예매</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">지역별 예매</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">공연별 예매</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">이벤트</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">진행중인
-                                    이벤트</a></li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">종료된
-                                    이벤트</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">커뮤니티</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">자유게시판</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">극단원 모집</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">오디션 정보</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">새 공연
-                                    소식</a></li>
-                        </ul>
-                    </li>
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block; margin-left: 45px;">극장검색</a>
-                    </li>
-                </ul>
             </div>
         </div>
     </div>
-    <div class="container" style="position:relative; width:100%;">
 
+    <div class="container">
+        <form name="signupForm" style="">
+            <div class="join_row">
+                <input type="text" class="uid input_box" name="uid" size=15 onchange="changeid();" placeholder="아이디"
+                    style="">
+                <input type="hidden" name="chkid" value="0">
+            </div>
+            <div class="join_row" style="clear: both;">
+                <input type="password" class="pwd input_box" name="pwd" onkeyup="chkpwd();" size=15 value="비밀번호"
+                    style=" margin-bottom: 0px;">
+            </div>
+            <input type="hidden" name="pwdchk" value="0">
+            <div class="divpwd"></div>
+            <div class="enter_login" style="margin-top: 20px;">
+                <button type="submit" class="" onClick="checkForm()">로그인</button>
+            </div>
+        </form>
+        <div class="find_btn">
+            <a href="./find_myinfo.html">
+                <span>아이디 찾기</span>
+            </a>
+            <span class="txt_div">|</span>
+            <a href="./find_myinfo.html">
+                <span>비밀번호 찾기</span>
+            </a>
+            <span class="txt_div">|</span>
+            <a href="./join.html">
+                <span>회원가입</span>
+            </a>
+        </div>
+    </div>
     </div>
     <footer style="width: 980px; margin:0 auto;">
-        <a href=" /" style="width: 150px;">
-            <img class="logo" src="./img/logo.png" alt="로고">
+        <!-- <a href=" /" style="width: 150px;">
+            <img class="logo" src="./img/logo_join2.png" alt="로고">
         </a>
         <div class="company_info">
             <address>(08368)서울특별시 구로구 항동 171-4, 하버라인 3단지 309동 101호</address>
@@ -117,7 +80,7 @@
                 <dt>Ticatcher</dt>
                 <dt>Tel : 010-9074-1056</dt>
             </d1>
-        </div>
+        </div> -->
     </footer>
 </body>
 
