고객센터 페이지 작업

--- a/help_faq.html
+++ b/help_faq.html
@@ -14,7 +14,7 @@
     <!-- 스타일시트 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/help.css">
+    <link rel="stylesheet" href="./css/help_faq.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -110,14 +110,14 @@
             <div class="left_wrap">
                 <p>고객센터</p>
                 <ul>
-                    <a href="#">
+                    <a href="./help.html">
                         <li class="left_wrap_btn">
-                            <span class="select_btn">공지사항</span>
+                            <span>공지사항</span>
                         </li>
                     </a>
-                    <a href="./help_faq.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
-                            <span>자주 찾는 질문</span>
+                            <span class="select_btn">자주 찾는 질문</span>
                         </li>
                     </a>
                     <a href="./help_qna.html">
@@ -129,7 +129,7 @@
             </div>
             <div class="right_wrap">
                 <p class="right_title">
-                    공지사항
+                    자주 찾는 질문
                 </p>
                 <div class="right_list">
                     <ul class="list_header">
@@ -139,8 +139,6 @@
                         <li>
                             제목
                         </li>
-                        <li>
-                            작성일</li>
                     </ul>
                     <ul class="list_contents">
                         <table width="100%">
@@ -152,8 +150,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -164,8 +160,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -176,8 +170,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -188,8 +180,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -200,8 +190,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -212,8 +200,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -224,8 +210,6 @@
                                                 1</li>
                                             <li>
                                                 첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -235,9 +219,7 @@
                                             <li>
                                                 1</li>
                                             <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
+                                                연락할 수 있는 방법이 뭐가 있나요?</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -247,9 +229,7 @@
                                             <li>
                                                 1</li>
                                             <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
+                                                어떻게 사용하는건가요?</li>
                                         </a>
                                     </td>
                                 </tr>
@@ -259,12 +239,11 @@
                                             <li>
                                                 1</li>
                                             <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
+                                                티캐쳐는 어떤 홈페이지 인가요?</li>
                                         </a>
                                     </td>
                                 </tr>
+
                             </tbody>
                         </table>
                     </ul>
