--- a/help_qna.html
+++ b/help_qna.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/help.css">
+    <link rel="stylesheet" href="./css/help_qna.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -110,9 +111,9 @@
             <div class="left_wrap">
                 <p>고객센터</p>
                 <ul>
-                    <a href="#">
+                    <a href="./help.html">
                         <li class="left_wrap_btn">
-                            <span class="select_btn">공지사항</span>
+                            <span>공지사항</span>
                         </li>
                     </a>
                     <a href="./help_faq.html">
@@ -120,16 +121,16 @@
                             <span>자주 찾는 질문</span>
                         </li>
                     </a>
-                    <a href="./help_qna.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
-                            <span>1:1 문의</span>
+                            <span class="select_btn">1:1 문의</span>
                         </li>
                     </a>
                 </ul>
             </div>
             <div class="right_wrap">
                 <p class="right_title">
-                    공지사항
+                    1:1 문의
                 </p>
                 <div class="right_list">
                     <ul class="list_header">
@@ -140,20 +141,55 @@
                             제목
                         </li>
                         <li>
-                            작성일</li>
+                            이름
+                        </li>
+                        <li>
+                            작성일
+                        </li>
+                        <li>
+                            처리상태
+                        </li>
                     </ul>
                     <ul class="list_contents">
                         <table width="100%">
                             <tbody>
                                 <tr>
                                     <td valign="top" align="center">
+                                        <li>
+                                            1
+                                        </li>
+                                        <li>
+                                            문의
+                                        </li>
+                                        <li>
+                                            정원진
+                                        </li>
+                                        <li>
+                                            2023-01-01
+                                        </li>
+                                        <li>
+                                            접수 중
+                                        </li>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                문의
+                                            </li>
                                             <li>
-                                                2023-01-01</li>
+                                                정원진
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
+                                            <li>
+                                                처리 중
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -161,114 +197,27 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                문의
+                                            </li>
                                             <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
+                                                정원진
+                                            </li>
                                             <li>
-                                                1</li>
+                                                2023-01-01
+                                            </li>
                                             <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td valign="top" align="center">
-                                        <a href="">
-                                            <li>
-                                                1</li>
-                                            <li>
-                                                첫번째</li>
-                                            <li>
-                                                2023-01-01</li>
+                                                처리완료
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
                     </ul>
-                    <div class="list_pager">
+                    <!-- <div class="list_pager">
                         <button class="btn_pager first" type="button" onclick="">처음</button>
                         <button class="btn_pager prev" type="button" onclick="">이전</button>
                         <ul>
@@ -306,7 +255,14 @@
 
                         <button class="btn_pager next" type="button" onclick="">다음</button>
                         <button class="btn_pager end" type="button" onclick="">끝</button>
-                    </div>
+                    </div> -->
+                </div>
+                <div>
+                    <a href="./help_new_qna.html">
+                        <div class="write_btn">
+                            글쓰기
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
