--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             </div>
         </div>
     </div>
-    <div class="container" style="position:relative; width:100%;">
+    <div class="container">
         <div class="play_chart">
-            <div class="contents" style="width:980px; height:100%; margin:0 auto; overflow: hidden;">
+            <div class="contents">
 
                 <div class="play_swiper slider">
                     <div class="chart_text"
