결제 페이지 작업 중

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                                     <tr>
                                                         <td>
                                                             <div>
-                                                                <img src="https://timeticket.co.kr/wys2/file_attach_thumb/2022/10/31/1667178239-10-0_wonbon_N_7_226x316_90_2.jpg"
+                                                                <img src="https://timeticket.co.kr/wys2/file_attach_thumb/2022/01/27/1643271898-98-0_wonbon_N_7_226x316_90_2.jpg"
                                                                     alt="공연 썸네일"
                                                                     style="border-radius: 10px; margin-bottom: 5px;">
                                                             </div>
@@ -136,7 +136,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <strong>러브액츄얼리</strong>
+                                                            <strong>한 뼘 사이</strong>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -436,9 +436,9 @@
             </div>
         </div>
     </div>
-    <footer style="width: 980px; margin:0 auto; margin-top: 10px; font-size: 11px;">
+    <footer style="width: 980px; margin:0 auto; margin-top: 10px; font-size: 12px;">
         <a href=" /">
-            <img class="logo" src="./img/logo.png" alt="로고" style="width:180px;">
+            <img class="logo" src="./img/logo.png" alt="로고" style="width:150px;">
         </a>
         <div class="all_company">
             <div class="company_info" style="float: left; margin-right: 15px;">
@@ -466,7 +466,7 @@
             <div class="company_info" style="margin-top: 5px;">
                 <d1 class="company_info_list">
                     <!-- <dt></dt> -->
-                    <dd>&#169; Ticatcher. All Rights Reserved. 본 사이트는 포트폴리오 용으로 만들었습니다.</dd>
+                    <dd>&#169; Ticatcher. All Rights Reserved. 본 사이트는 포트폴리오 용으로 제작하였습니다.</dd>
                 </d1>
             </div>
         </div>
