--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                 <input type="hidden" name="chkid" value="0">
             </div>
             <div class="join_row" style="clear: both;">
-                <input type="password" class="pwd input_box" name="pwd" onkeyup="chkpwd();" size=15 value="비밀번호"
+                <input type="password" class="pwd input_box" name="pwd" onkeyup="chkpwd();" size=15 placeholder="****"
                     style=" margin-bottom: 0px;">
             </div>
             <input type="hidden" name="pwdchk" value="0">
